--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -1,3 +1,4 @@
+
 .title {
   font-family: var(--font-secondary);
   font-size: 32px;
@@ -12,6 +13,15 @@
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
+}
+
+.text-big {
+  font-family: var(--font-secondary);
+  font-size: 36px;
+  font-style: normal;
+  font-weight: bold;
+  line-height: 40px;
+  text-align: center;
 }
 
 .text-medium {
