feat: enhance landing page with new animations and favicon
✔️ Adds a favicon to the project
✔️ Implements new animation classes for elements
✔️ Updates CSS styles for improved layout and responsiveness
✔️ Removes unused animations CSS file

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,4 @@
 @import './variables.css';
-@import './animations.css';
 @import './utils.css';
 
 * {
@@ -70,9 +69,10 @@ body {
 }
 
 .video {
-  margin-top: 12rem;
+  margin-top: 6rem;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 4rem;
 }
 
@@ -86,9 +86,9 @@ body {
     border-radius: 16px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     width: 100%;
-    min-width: 300px;
+    min-width: 380px;
     max-width: 500px;
-    height: auto;
+    height: 100%;
     object-fit: cover;
   }
 }
@@ -115,7 +115,7 @@ body {
 }
 
 .team {
-  margin-top: 12rem;
+  margin-top: 8rem;
   display: flex;
   flex-direction: column;
   gap: 4rem;
@@ -123,7 +123,7 @@ body {
 
   h2 {
     text-align: center;
-    margin-bottom: 6rem;
+    margin-bottom: 2rem;
   }
 }
 
@@ -340,24 +340,119 @@ body {
 
 /* animations */
 
+.slide-in-bl {
+  animation: slide-in-bl 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+.slide-in-right {
+  animation: slide-in-right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+.slide-in-bottom {
+  animation: slide-in-bottom 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+.slit-in-vertical {
+  animation: slit-in-vertical 0.8s ease-out both;
+}
+
 .fade-in-left {
-  animation: fadeInLeft 1s ease-in-out both;
+  animation: fade-in-left 1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
-.slide-in-blurred-right {
-  animation: slideInBlurredRight 1s linear both;
+.fade-in-right {
+  animation: fade-in-right 1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
-.slide-in-blurred-left {
-  animation: slideInBlurredLeft 1s linear 0.6s both;
+.pulsate-fwd {
+  animation: pulsate-fwd 0.8s ease-in-out both;
 }
 
-.puff-in-ver {
-  animation: puffInVer 0.7s cubic-bezier(0.47, 0, 0.745, 0.715) both;
+@keyframes scaleProgress {
+  0% {
+    transform: scaleX(0);
+  }
+  100% {
+    transform: scaleX(1);
+  }
 }
 
-.bounce-top {
-  animation: bounceTop 0.9s both;
+@keyframes slide-in-bl {
+  0% {
+    transform: translateY(200px) translateX(-200px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0) translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-in-right {
+  0% {
+    transform: translateX(200px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-in-bottom {
+  0% {
+    transform: translateY(200px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slit-in-vertical {
+  0% {
+    transform: rotateY(-80deg);
+    opacity: 0;
+  }
+  100% {
+    transform: rotateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in-left {
+  0% {
+    transform: translateX(-50px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in-right {
+  0% {
+    transform: translateX(50px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes pulsate-fwd {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 /* mobile */
@@ -397,7 +492,7 @@ body {
   }
 
   .welcome-image > img:hover {
-    transform: scale(1.15);
+    transform: scale(1.05);
   }
 }
 
@@ -405,6 +500,17 @@ body {
   main {
     max-width: 1536px;
     margin: 0 auto;
+  }
+}
+
+@media (width >= 96rem) {
+  .video {
+    flex-wrap: nowrap;
+    justify-content: start;
+  }
+
+  .team-members {
+    flex-wrap: nowrap;
   }
 
   .testimonials-items {
